--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^7.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "youtube-thumbnail": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
