--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "framer-motion": "^7.0.0",
-    "next": "^13.2.3",
+    "next": "^15.0.2",
     "plaiceholder": "^2.5.0",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
